# MEAL_TRACKER_v3

./: .gitignore  Cargo.toml  README.md  cleanup.sh  deploy.sh  docker-cleanup.ps1  docker-cleanup.sh  docker-compose.yml  health-check.sh  quickstart.sh
database/: README.md
database/migrations/: 008_add_recipe_import_tables.sql
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: README.md
frontend/src/components/AI/: AIFloatingAssistant.tsx
frontend/src/components/ErrorBoundary/: ErrorBoundary.tsx
frontend/src/components/Navigation/: NavigationBar.tsx
frontend/src/components/Notifications/: NotificationCenter.tsx
frontend/src/components/UI/: LoadingScreen.tsx
frontend/src/contexts/: AIAssistantContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: README.md  useApi.ts  useAuth.ts  useRecipes.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  MealPlan.tsx  MealPlanning.tsx  NutritionTracking.tsx  Profile.tsx  RecipeManager.tsx  Register.tsx  ShoppingLists.tsx
frontend/src/store/: index.ts  store.ts
frontend/src/store/slices/: authSlice.ts  mealPlanSlice.ts  uiSlice.ts
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: api_gateway.json
services/: README.md
services/analytics-service/: Cargo.toml  Dockerfile
services/analytics-service/src/: analytics_engine.rs  database.rs  main.rs  models.rs  predictive_model.rs  trend_analyzer.rs
services/api-gateway/: Cargo.toml  Dockerfile  README.md
services/api-gateway/migrations/: 001_initial.sql  001_initial_schema.sql
services/api-gateway/src/: auth.rs  cache.rs  database.rs  main.rs  metrics.rs  middleware_layer.rs  services.rs  websocket.rs
services/api-gateway/src/handlers/: auth.rs  meal_plans.rs  mod.rs  nutrition.rs  recipe_handlers.rs  recipes.rs  users.rs
services/api-gateway/src/models/: mod.rs
services/nutrition-service/: Cargo.toml  Dockerfile  README.md
services/nutrition-service/src/: ai_engine.rs  database.rs  main.rs  models.rs  nutrition_analyzer.rs  predictive_model.rs  recommendation_engine.rs  trend_analyzer.rs
services/recipe-import-service/: Cargo.toml  Dockerfile
services/recipe-import-service/migrations/: 001_initial_schema.sql
services/recipe-import-service/src/: main.rs  models.rs  recipe_importer.rs
