[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.23", features = ["tokio-comp"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
prometheus = "0.13"
