[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
bcrypt = "0.17"
jsonwebtoken = "9.2"
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
prometheus = "0.14"
dashmap = "6.1"
urlencoding = "2.1"
axum-extra = { version = "0.10", features = ["typed-header"] }
