[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.23", features = ["tokio-comp"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }
validator = { version = "0.16", features = ["derive"] }
futures = "0.3"
dashmap = "5.5"
prometheus = "0.13"
metrics = "0.21"
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
