[package]
name = "recipe-import-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recipe-import-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
walkdir = "2.5"
regex = "1.11"
